--- a/AllTheKeys/AllTheKeys.fsproj
+++ b/AllTheKeys/AllTheKeys.fsproj
@@ -8,7 +8,7 @@
     <PropertyGroup>
         <PackageId>TromboneChamp.AllTheKeys</PackageId>
         <Title>AllTheKeys</Title>
-        <Version>1.0.0</Version>
+        <Version>1.0.1</Version>
         <Authors>offbeatwitch</Authors>
         <Company>TromboneChamps</Company>
         <PackageTags>Trombone Champ</PackageTags>
@@ -23,4 +23,16 @@
     <ItemGroup>
         <Compile Include="Library.fs"/>
     </ItemGroup>
+
+    <ItemGroup>
+        <ThunderstoreAssets Include="$(SolutionDir)thunderstore\*.*" />
+    </ItemGroup>
+
+    <Target Name="ThunderstoreZip" AfterTargets="Build" Condition="'$(Configuration)' == 'Release'">
+        <Delete Files="$(OutDir)thunderstore" />
+        <Delete Files="$(OutDir)$(ProjectName)-thunderstore.zip" />
+        <Copy SourceFiles="@(ThunderstoreAssets)" DestinationFolder="$(OutDir)thunderstore" />
+        <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(OutDir)thunderstore/BepInEx/plugins" />
+        <ZipDirectory DestinationFile="$(OutDir)$(ProjectName)-thunderstore.zip" SourceDirectory="$(OutDir)thunderstore" />
+    </Target>
 </Project>
